--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 * {
     margin: 0;
     padding: 0;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 body {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    
     font-size: 20px;
+    color: #ffffff;
 }
+
 .header {
+    font-family: serif;
     background-color: #008000;
     height: 40px;
     line-height: 40px;
@@ -16,27 +19,39 @@ body {
 }
 
 .content {
+    font-family: sans-serif;
     background-color: #0000ff;
     padding: 25px;
+    padding-bottom: 5px;
     width: 550px;
     margin-left: auto;
     margin-right: auto;
 }
 
-.content h1 {
-    color: #ffffff;
+.content::after {
+    content: '';
+    display: block;
+    clear: both;
+    visibility: hidden;
 }
 
-.content .figure {
+.content * {
+    margin-bottom: 10px;
+}
+
+.content article h2 {
+    font-size: 1.5em;
+    margin-bottom: 20px;
+}
+
+.content article .figure {
     height: 100px;
     width: 100px;
     border: 5px solid #ffffff;
     border-top-left-radius: 20px;
     border-bottom-right-radius: 20px;
-}
-
-.content .text {
-    color: #ffffff;
+    float: left;
+    margin: 0px 21px 30px 0;
 }
 
 .content .link {
@@ -47,6 +62,92 @@ body {
     color: #ff0000;
 }
 
+.content .list h3 {
+    word-spacing: 20px;
+}
+
 .content .list .red_word {
     color: #ff0000;
+}
+
+.content .list ul {
+    margin-left: 50px;
+}
+
+.content .list ul li {
+    margin-bottom: 9px;;
+}
+
+.content .list ul li:nth-child(2) {
+    color: #00ffff;
+    letter-spacing: 7px;
+}
+
+.content .visual_styles {
+    float: left;
+    width: 406px;
+}
+
+.content .visual_styles ul {
+    list-style: none;
+    margin-bottom: -15px;
+}
+
+.content .visual_styles ul li {
+    margin-bottom: 10px;;
+}
+
+.content .visual_styles ul li:first-child {
+    font-style: italic;
+}
+
+.content .visual_styles ul li:nth-child(2) {
+    font-weight: bold;
+}
+
+.content .visual_styles ul li:nth-child(3) {
+    text-decoration: underline;
+    margin-bottom: 20px;
+}
+
+.content .visual_styles ul li:last-child {
+    text-decoration: line-through;
+}
+
+.content .table {
+    text-align: right;
+}
+
+.content .table table {
+    border: 1px solid silver;
+    padding: 1px;
+}
+
+.content .table table tr td {
+    width: 42px;
+    height: 32px;
+    border: 1px solid silver;
+    text-align: center;
+}
+
+.content .table table tr:first-child td:first-child {
+    background-color: #008000;
+    vertical-align: bottom;
+}
+
+.content .table table tr:last-child td:last-child {
+    background-color: #ff0000;
+}
+
+.content .table img {
+    margin-top: 2px;
+}
+
+.footer {
+    font-family: sans-serif;
+    background-color: #008000;
+    height: 40px;
+    line-height: 40px;
+    color: #ffffff;
+    text-align: center;
 }
