--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@ body {
     text-align: center;
 }
 
+.header h1 {
+    font-size: 20px;
+    font-weight: lighter;
+}
+
 .content {
     font-family: sans-serif;
     background-color: #0000ff;
@@ -97,16 +102,7 @@ body {
     margin-bottom: 10px;;
 }
 
-.content .visual_styles ul li:first-child {
-    font-style: italic;
-}
-
-.content .visual_styles ul li:nth-child(2) {
-    font-weight: bold;
-}
-
 .content .visual_styles ul li:nth-child(3) {
-    text-decoration: underline;
     margin-bottom: 20px;
 }
 
