--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <ul>
-    <li><a asp-area="" asp-controller="" asp-action="ViewModel">ViewModel</a></li>
-    <li><a asp-area="" asp-controller="" asp-action="">ViewBag</a></li>
+    <li><a asp-area="" asp-controller="" asp-action="ViewModel">Using Model Calc</a></li>
+    <li><a asp-area="" asp-controller="" asp-action="ViewDataCalc">Using ViewData Calc</a></li>
+    <li><a asp-area="" asp-controller="" asp-action="ViewBagMethod">Using ViewBag Calc</a></li>
+    <li><a asp-area="" asp-controller="" asp-action="InjectionCalc">Using Service Injection Calc</a></li>
 </ul>
